# mono_Manager

./: .gitignore  AGENTS.md  AGENTS.override.md  Cargo.toml  README.md  check_list.md  config.yaml  configs.yaml  feedback.md  functions.txt  functions.yaml  input.md  plan.md  report.md
.agents/: .tmux_prompt.txt  implementation.md  log.md  plan.yaml  request.md
.project/: check_list.md  drafts_list.yaml  log.md  plan.yaml  project.md  report.md  scenario.md  todos.yaml
.project/test/: todos.yaml
.temp/: a.sessions.yaml  a.yaml  test-room.yaml  test.sessions.yaml  test.yaml
.tmp_orclive/.project/: project.md
.tmp_orclive_wrap/: tmux
.tmp_tmux_flow2/: run.sh
.tmp_tmux_flow2/.agents/: log.md
.tmp_tmux_flow2/scripts/: bootstrap.sh
.tmp_tmux_iso/: input.md  report.md  tmux_split_verify.sh
.tmp_tmux_iso/.agents/: log.md
.tmp_tmux_iso/.project/: drafts.yaml  plan.yaml
.tmp_tmux_log/.project/: project.md
.tmp_tmux_log2/.project/: project.md
.tmp_tmux_test/: index.html  input.md  report.md  script.js  styles.css
.tmp_tmux_test/.agents/: log.md
.tmp_tmux_test/.project/: drafts.yaml  plan.yaml  project.md
.tmp_tmux_test/references/: problem-analysis.md
.tmp_tmux_test2/: index.html  input.md  report.md  run_tmux_split_verification.sh  script.js  styles.css
.tmp_tmux_verify/: input.md  report.md  run.sh
.tmp_tmux_wrap/: tmux
.tmp_tmux_wrap2/: tmux
configs/: app.yaml  bootstrap.md  project.yaml  style.yaml
scripts/: run_drafts_parallel.py
src/: chat.rs  cli.rs  code.rs  draft.rs  main.rs  plan.rs  project.rs  story.rs
src/cli/: mod.rs
(+343 files in other folders)
