[package]
name = "rust-orchestra"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-orchestra"
path = "src/main.rs"

[[bin]]
name = "orc"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.48", features = ["full"] }
