[package]
name = "rust-orchestra"
version = "0.1.11"
edition = "2021"
autobins = false

[[bin]]
name = "orc"
path = "src/main.rs"

[dependencies]
axum = "0.8"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
unicode-width = "0.2"
